tests/derive_compile_fail/non_scan.stderr
error[E0277]: the trait bound `NotScan: shredder::Scan` is not satisfied
 --> $DIR/non_scan.rs:6:10
  |
6 | #[derive(Scan)]
  |          ^^^^ expected an implementor of trait `shredder::Scan`
  |
  = note: required because of the requirements on the impl of `shredder::Scan` for `NotScan`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
