tests/derive_compile_fail/non_scan.rs
#[macro_use]
extern crate shredder;

struct NotScan {}

#[derive(Scan)]
struct Test0 {
    field: NotScan
}

fn main() {}
